# final_desktop

./: .clangd  .flake8  .gitignore  README.md  REPOSITORY_CLEANUP_GUIDE.md  SIMULATION_GUIDE.md  analyze_test_results.py  create_final_plots.py  faster_settling_comparison.md  flc_effectiveness_report_20250609_001730.txt  multi-agent-formation-control.code-workspace  optimal_pid_summary_20250609_001504.txt  plot_full_simulation.py  plot_simulation.py  pyproject.toml  revised_experiment_simulation_setup.tex  run_comprehensive_simulations_fixed.ps1  run_simulations_enhanced.ps1  run_simulations_simple.ps1  run_systematic_tests.ps1  run_tests.ps1  run_tests_clean.ps1  systematic_test_summary.md  systematic_testing.py  test_faster_settling.yaml  vcpkg.json.disabled
agent_control_pkg/: CMakeLists.txt  package.xml  pid_pls_project_plan.md  simple_comparison.py  simple_comparison_backup.py  simple_comparison_fixed.py  vcpkg.json.disabled
agent_control_pkg/analysis_results/: analysis_summary.txt
agent_control_pkg/config/: fuzzy_params.yaml  pid_params.yaml  simulation_params.yaml  simulation_params.yaml.backup_20250608_230521
agent_control_pkg/include/agent_control_pkg/: config_reader.hpp  fuzzy_params_loader.hpp  gt2_fuzzy_logic_system.hpp  pid_controller.hpp
agent_control_pkg/simulation_outputs/: metrics_sim_Kp1.800_Ki2.400_Kd0.337_FLS_ON_WIND_ON_20250607_235559.txt  metrics_sim_Kp1.980_Ki1.980_Kd1.307_FLS_ON_WIND_ON_20250608_000133.txt  metrics_sim_Kp2.700_Ki2.500_Kd0.810_FLS_ON_WIND_ON_20250607_235505.txt  metrics_sim_Kp24.000_Ki3.200_Kd118.800_FLS_OFF_WIND_ON_20250608_001330.txt  metrics_sim_Kp24.000_Ki3.200_Kd118.800_FLS_ON_WIND_ON_20250608_000806.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_OFF_20250608_005008.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_OFF_20250608_005247.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_ON_20250608_004959.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_ON_20250608_005239.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_ON_20250608_203356.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_ON_20250608_204358.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_OFF_20250608_005011.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_OFF_20250608_005250.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_ON_20250607_215752.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_ON_20250607_235344.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_ON_20250608_005002.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_ON_20250608_005242.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_ON_20250608_203326.txt  metrics_sim_Kp54.000_Ki6.667_Kd121.500_FLS_OFF_WIND_ON_20250608_001442.txt  metrics_sim_Kp7.000_Ki1.000_Kd4.500_FLS_OFF_WIND_ON_20250608_193743.txt  metrics_sim_Kp7.000_Ki1.000_Kd4.500_FLS_ON_WIND_ON_20250608_184924.txt  metrics_sim_Kp7.000_Ki1.000_Kd4.500_FLS_ON_WIND_ON_20250608_185041.txt  metrics_sim_ZN_Conservative_Kp54.000_Ki6.667_Kd121.500_FLS_OFF_WIND_ON_20250608_002215.txt  metrics_sim_ZN_Conservative_Kp54.000_Ki6.667_Kd121.500_FLS_ON_WIND_ON_20250608_002233.txt  multi_agent_sim_Kp1.800_Ki2.400_Kd0.337_FLS_ON_WIND_ON_20250607_235559.csv  multi_agent_sim_Kp2.700_Ki2.500_Kd0.810_FLS_ON_WIND_ON_20250607_235505.csv  multi_agent_sim_Kp24.000_Ki3.200_Kd118.800_FLS_OFF_WIND_ON_20250608_001330.csv  multi_agent_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_OFF_20250608_005247.csv  multi_agent_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_ON_20250608_005239.csv  multi_agent_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_OFF_20250608_005011.csv  multi_agent_sim_Kp7.000_Ki1.000_Kd4.500_FLS_OFF_WIND_ON_20250608_193743.csv  multi_agent_sim_Kp7.000_Ki1.000_Kd4.500_FLS_ON_WIND_ON_20250608_184924.csv  multi_agent_sim_ZN_Conservative_Kp54.000_Ki6.667_Kd121.500_FLS_OFF_WIND_ON_20250608_002215.csv  multi_agent_sim_ZN_Conservative_Kp54.000_Ki6.667_Kd121.500_FLS_ON_WIND_ON_20250608_002233.csv
agent_control_pkg/simulation_outputs/zn_tuning/: zn_auto_search_20250607_235405.txt  zn_auto_search_20250607_235419.txt  zn_auto_search_20250608_000702.txt  zn_auto_search_20250608_000728.txt
agent_control_pkg/src/: agent_control_main.cpp  config_reader.cpp  fuzzy_params_loader.cpp  fuzzy_test_main.cpp  gt2_fuzzy_logic_system.cpp  multi_drone_pid_test_main.cpp  pid_controller.cpp  simple_pid_tuning_main.cpp
agent_control_pkg/src/modular_pid_system/: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  build_and_test.ps1  drone_system.cpp  drone_system.hpp  pid_only_test.cpp  pid_wind_flc_test.cpp  pid_wind_test.cpp  zn_tuning.cpp  zn_tuning.hpp  zn_tuning_test.cpp
agent_control_pkg/test/: test_gt2_fls.cpp  test_pid_controller.cpp
analysis/: analyze_test_results.py  automated_testing_analyzer.py  final_project_analysis.py  optimal_pid_flc_analysis.py  optimal_pid_focused_analysis.py  plot_simulation_results.py  systematic_testing.py
build-ninja/: CMakeCache.txt
final_project_results/: analysis_report.txt  comprehensive_analysis_report.txt
other_packages/formation_coordinator_pkg/: CMakeLists.txt  package.xml
other_packages/formation_coordinator_pkg/config/: formation_config.yaml  pso_params.yaml
project management/: LICENSE  vcpkg.json
schemas/: ros-param-schema.json
scripts/: auto_pid_tuner.py
simulation_outputs/: 05_FLS_Wind_04_FF_Only_03_Wind_Only_multi_agent_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_ON_20250608_145849.csv  05_FLS_Wind_multi_agent_sim_Kp3.100_Ki0.400_Kd2.200_FLS_ON_WIND_ON_20250608_145933.csv  FLS_Demo_2_PID_Wind_FLS_Demo_1_Pure_PID_multi_agent_sim_Kp7.000_Ki1.000_Kd4.500_FLS_OFF_WIND_OFF_20250608_151957.csv  Faster_Test1_Moderate_multi_agent_sim_Kp4.500_Ki0.600_Kd3.000_FLS_ON_WIND_ON_20250608_151435.csv  Faster_Test3_Aggressive_Faster_Test2_Balanced_multi_agent_sim_Kp5.500_Ki0.800_Kd3.500_FLS_ON_WIND_OFF_20250608_151559.csv  Faster_Test3_Aggressive_multi_agent_sim_Kp7.000_Ki1.000_Kd4.500_FLS_ON_WIND_OFF_20250608_151626.csv  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_OFF_20250608_145744.txt  metrics_sim_Kp3.100_Ki0.400_Kd2.200_FLS_OFF_WIND_OFF_20250608_145916.txt  pid_wind_flc_formation_test_data.csv  (+22 more)
(+232 files in other folders)
